<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:id="@+id/txt_calc_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:textSize="32dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:background="#ffffff"/>

    <TextView
        android:id="@+id/txt_calc_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/calc_btn_0"
        android:gravity="right"
        android:textSize="64dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="35dp"
        android:background="#ffffff"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="62dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calc_btn_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_ac"/>

            <Button
                android:id="@+id/calc_btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_sign" />

            <Button
                android:id="@+id/calc_btn_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_percent" />

            <Button
                android:id="@+id/calc_btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_div" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calc_btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_7" />

            <Button
                android:id="@+id/calc_btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_8" />

            <Button
                android:id="@+id/calc_btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_9" />

            <Button
                android:id="@+id/calc_btn_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_multi" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calc_btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_4" />

            <Button
                android:id="@+id/calc_btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_5" />

            <Button
                android:id="@+id/calc_btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_6" />

            <Button
                android:id="@+id/calc_btn_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_sub" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calc_btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_1" />

            <Button
                android:id="@+id/calc_btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_2" />

            <Button
                android:id="@+id/calc_btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_3" />

            <Button
                android:id="@+id/calc_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_add" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calc_btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_0" />

            <Button
                android:id="@+id/calc_btn_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/calc_btn_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_period"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/calc_btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_btn_equal" />
        </TableRow>
    </TableLayout>
</LinearLayout>